cmake_minimum_required(VERSION 3.27)
project(leetcode_cpp)
include(FetchContent)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)

FetchContent_Declare(
        fmt
        GIT_REPOSITORY https://github.com/fmtlib/fmt.git
        GIT_TAG 10.1.1
        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/fmt)
FetchContent_MakeAvailable(fmt)

include_directories("./dependencies")
include_directories("./utils")

link_libraries(fmt::fmt-header-only)

add_library(utils STATIC
        utils/leetcode_utils.hpp
        utils/list_node.cpp
        utils/list_node.hpp
        utils/tree_node.cpp
        utils/tree_node.h
        utils/leetcode_utils.cpp)
target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/utils)

link_libraries(utils)

add_executable(longest_substr leetcode/longest_substr.cpp)
add_executable(add_binary leetcode/add_binary.cpp)
add_executable(bytedance leetcode/bytedance.cpp)
add_executable(two_sum leetcode/two_sum.cpp)
add_executable(add_two_numbers leetcode/add_two_numbers.cpp)
add_executable(kth_largest leetcode/kth_largest.cpp)
add_executable(letter_combinations leetcode/letter_combinations.cpp)
add_executable(combinations leetcode/combinations.cpp)
add_executable(replace_brace leetcode/replace_brace.cpp)
add_executable(permutations leetcode/permutations.cpp)
add_executable(combination_sum leetcode/combination_sum.cpp)
add_executable(generate_parentheses leetcode/generate_parentheses.cpp)
add_executable(word_search leetcode/word_search.cpp)
add_executable(n_queens_ii leetcode/n_queens_ii.cpp)
add_executable(tencent leetcode/tencent.cpp)
add_executable(powx_n leetcode/powx_n.cpp)
add_executable(max_points_on_a_line leetcode/max_points_on_a_line.cpp)
add_executable(find_k_pairs_with_smallest_sums leetcode/find_k_pairs_with_smallest_sums.cpp)
add_executable(trie_prefix_tree leetcode/trie_prefix_tree.cpp)
add_executable(design_add_and_search_words_data_structure leetcode/design_add_and_search_words_data_structure.cpp)
add_executable(word_search_ii leetcode/word_search_ii.cpp)
add_executable(number_of_1_bits leetcode/number_of_1_bits.cpp)
add_executable(single_number leetcode/single_number.cpp)
add_executable(single_number_ii leetcode/single_number_ii.cpp)
add_executable(bitwise_and_of_numbers_range leetcode/bitwise_and_of_numbers_range.cpp)
add_executable(search_insert_position leetcode/search_insert_position.cpp)
add_executable(search_a_2d_matrix leetcode/search_a_2d_matrix.cpp)
add_executable(find_peak_element leetcode/find_peak_element.cpp)
add_executable(search_in_rotated_sorted_array leetcode/search_in_rotated_sorted_array.cpp)
add_executable(find_first_and_last_position_of_element_in_sorted_array leetcode/find_first_and_last_position_of_element_in_sorted_array.cpp)
add_executable(find_minimum_in_rotated_sorted_array leetcode/find_minimum_in_rotated_sorted_array.cpp)
add_executable(median_of_two_sorted_arrays leetcode/median_of_two_sorted_arrays.cpp)
add_executable(triangle leetcode/triangle.cpp)
add_executable(minimum_path_sum leetcode/minimum_path_sum.cpp)
add_executable(unique_paths_ii leetcode/unique_paths_ii.cpp)
add_executable(longest_palindromic_substring leetcode/longest_palindromic_substring.cpp)
add_executable(interleaving_string leetcode/interleaving_string.cpp)
add_executable(edit_distance leetcode/edit_distance.cpp)
add_executable(maximal_square leetcode/maximal_square.cpp)
add_executable(ipo leetcode/ipo.cpp)
add_executable(snakes_and_ladders leetcode/snakes_and_ladders.cpp)
add_executable(minimum_genetic_mutation leetcode/minimum_genetic_mutation.cpp)
add_executable(word_ladder leetcode/word_ladder.cpp)
add_executable(find_median_from_data_stream leetcode/find_median_from_data_stream.cpp)
add_executable(maximum_subarray leetcode/maximum_subarray.cpp)
add_executable(maximum_sum_circular_subarray leetcode/maximum_sum_circular_subarray.cpp)
add_executable(best_time_to_buy_and_sell_stock_iii leetcode/best_time_to_buy_and_sell_stock_iii.cpp)
add_executable(best_time_to_buy_and_sell_stock_iv leetcode/best_time_to_buy_and_sell_stock_iv.cpp)
add_executable(merge_strings_alternately leetcode/merge_strings_alternately.cpp)
add_executable(reverse_words_in_a_string leetcode/reverse_words_in_a_string.cpp)
add_executable(increasing_triplet_subsequence leetcode/increasing_triplet_subsequence.cpp)
add_executable(string_compression leetcode/string_compression.cpp)
add_executable(max_number_of_k_sum_pairs leetcode/max_number_of_k_sum_pairs.cpp)
add_executable(maximum_number_of_vowels_in_a_substring_of_given_length leetcode/maximum_number_of_vowels_in_a_substring_of_given_length.cpp)
add_executable(max_consecutive_ones_iii leetcode/max_consecutive_ones_iii.cpp)
add_executable(longest_subarray_of_1s_after_deleting_one_element leetcode/longest_subarray_of_1s_after_deleting_one_element.cpp)
add_executable(determine_if_two_strings_are_close leetcode/determine_if_two_strings_are_close.cpp)
add_executable(equal_row_and_column_pairs leetcode/equal_row_and_column_pairs.cpp)
add_executable(removing_stars_from_a_string leetcode/removing_stars_from_a_string.cpp)
add_executable(asteroid_collision leetcode/asteroid_collision.cpp)
add_executable(decode_string leetcode/decode_string.cpp)
add_executable(dota2_senate leetcode/dota2_senate.cpp)
add_executable(delete_the_middle_node_of_a_linked_list leetcode/delete_the_middle_node_of_a_linked_list.cpp)
add_executable(odd_even_linked_list leetcode/odd_even_linked_list.cpp)
add_executable(maximum_twin_sum_of_a_linked_list leetcode/maximum_twin_sum_of_a_linked_list.cpp)
add_executable(count_good_nodes_in_binary_tree leetcode/count_good_nodes_in_binary_tree.cpp)
add_executable(path_sum_iii leetcode/path_sum_iii.cpp)
add_executable(path_sum_ii leetcode/path_sum_ii.cpp)
add_executable(longest_zigzag_path_in_a_binary_tree leetcode/longest_zigzag_path_in_a_binary_tree.cpp)
add_executable(lowest_common_ancestor_of_a_binary_tree leetcode/lowest_common_ancestor_of_a_binary_tree.cpp)
add_executable(binary_tree_right_side_view leetcode/binary_tree_right_side_view.cpp)
add_executable(maximum_level_sum_of_a_binary_tree leetcode/maximum_level_sum_of_a_binary_tree.cpp)
add_executable(delete_node_in_a_bst leetcode/delete_node_in_a_bst.cpp)
add_executable(keys_and_rooms leetcode/keys_and_rooms.cpp)
add_executable(number_of_provinces leetcode/number_of_provinces.cpp)
add_executable(reorder_routes_to_make_all_paths_lead_to_the_city_zero leetcode/reorder_routes_to_make_all_paths_lead_to_the_city_zero.cpp)
add_executable(dtl leetcode/dtl.cpp)
add_executable(snowflake leetcode/snowflake.cpp)
add_executable(sort algorithm/sort.cpp)
add_executable(container algorithm/container.cpp)
add_executable(graph algorithm/graph.cpp)
add_executable(house_robber leetcode/house_robber.cpp)
add_executable(domino_and_tromino_tiling leetcode/domino_and_tromino_tiling.cpp)
add_executable(unique_paths leetcode/unique_paths.cpp)
add_executable(longest_common_subsequence leetcode/longest_common_subsequence.cpp)
add_executable(best_time_to_buy_and_sell_stock_with_transaction_fee leetcode/best_time_to_buy_and_sell_stock_with_transaction_fee.cpp)
add_executable(huawei companies/huawei.cpp)
add_executable(meituan companies/meituan.cpp)
add_executable(minimum_flips_to_make_a_or_b_equal_to_c leetcode/minimum_flips_to_make_a_or_b_equal_to_c.cpp)
add_executable(search_suggestions_system leetcode/search_suggestions_system.cpp)
add_executable(minimum_number_of_arrows_to_burst_balloons leetcode/minimum_number_of_arrows_to_burst_balloons.cpp)
add_executable(non_overlapping_intervals leetcode/non_overlapping_intervals.cpp)
add_executable(longest_increasing_subsequence leetcode/longest_increasing_subsequence.cpp)
add_executable(daily_temperatures leetcode/daily_temperatures.cpp)
add_executable(online_stock_span leetcode/online_stock_span.cpp)
add_executable(combination_sum_iii leetcode/combination_sum_iii.cpp)
add_executable(successful_pairs_of_spells_and_potions leetcode/successful_pairs_of_spells_and_potions.cpp)
add_executable(koko_eating_bananas leetcode/koko_eating_bananas.cpp)
add_executable(total_cost_to_hire_k_workers leetcode/total_cost_to_hire_k_workers.cpp)
add_executable(maximum_subsequence_score leetcode/maximum_subsequence_score.cpp)
add_executable(xiaoyong companies/xiaoyong.cpp)
add_executable(find_if_path_exists_in_graph leetcode/find_if_path_exists_in_graph.cpp)
add_executable(all_paths_from_source_to_target leetcode/all_paths_from_source_to_target.cpp)
add_executable(shortest_distance_after_road_addition_queries_i leetcode/shortest_distance_after_road_addition_queries_i.cpp)
add_executable(get_watched_videos_by_your_friends leetcode/get_watched_videos_by_your_friends.cpp)
add_executable(find_the_maximum_number_of_marked_indices leetcode/find_the_maximum_number_of_marked_indices.cpp)
add_executable(maximum_number_of_robots_within_budget leetcode/maximum_number_of_robots_within_budget.cpp)
add_executable(libreoj_160 companies/libreoj/libreoj_160.cpp)
add_executable(add_strings leetcode/add_strings.cpp)
add_executable(design_circular_deque leetcode/design_circular_deque.cpp)
add_executable(time_needed_to_buy_tickets leetcode/time_needed_to_buy_tickets.cpp)
add_executable(sudoku_solver leetcode/sudoku_solver.cpp)
add_executable(maximum_total_reward_using_operations_ii leetcode/maximum_total_reward_using_operations_ii.cpp)
add_executable(height_of_binary_tree_after_subtree_removal_queries leetcode/height_of_binary_tree_after_subtree_removal_queries.cpp)
add_executable(redundant_connection leetcode/redundant_connection.cpp)
add_executable(split_array_largest_sum leetcode/split_array_largest_sum.cpp)
add_executable(count_square_submatrices_with_all_ones leetcode/count_square_submatrices_with_all_ones.cpp)
add_executable(reverse_pairs leetcode/reverse_pairs.cpp)
add_executable(shopping_offers leetcode/shopping_offers.cpp)
add_executable(rotate_string leetcode/rotate_string.cpp)
add_executable(sum_of_square_numbers leetcode/sum_of_square_numbers.cpp)
add_executable(largest_combination_with_bitwise_and_greater_than_zero leetcode/largest_combination_with_bitwise_and_greater_than_zero.cpp)
add_executable(check_if_the_rectangle_corner_is_reachable leetcode/check_if_the_rectangle_corner_is_reachable.cpp)
add_executable(maximum_xor_for_each_query leetcode/maximum_xor_for_each_query.cpp)
add_executable(design_neighbor_sum_service leetcode/design_neighbor_sum_service.cpp)
add_executable(minimum_array_end leetcode/minimum_array_end.cpp)
add_executable(single_element_in_a_sorted_array leetcode/single_element_in_a_sorted_array.cpp)
add_executable(shortest_subarray_with_or_at_least_k_ii leetcode/shortest_subarray_with_or_at_least_k_ii.cpp)
add_executable(minimum_cost_to_cut_a_stick leetcode/minimum_cost_to_cut_a_stick.cpp)
add_executable(prime_subtraction_operation leetcode/prime_subtraction_operation.cpp)
add_executable(count_substrings_that_satisfy_k_constraint_i leetcode/count_substrings_that_satisfy_k_constraint_i.cpp)
add_executable(most_beautiful_item_for_each_query leetcode/most_beautiful_item_for_each_query.cpp)
add_executable(count_substrings_that_satisfy_k_constraint_ii leetcode/count_substrings_that_satisfy_k_constraint_ii.cpp)
add_executable(count_the_number_of_fair_pairs leetcode/count_the_number_of_fair_pairs.cpp)
add_executable(count_the_number_of_good_nodes leetcode/count_the_number_of_good_nodes.cpp)
add_executable(minimized_maximum_of_products_distributed_to_any_store leetcode/minimized_maximum_of_products_distributed_to_any_store.cpp)
add_executable(binary_search leetcode/binary_search.cpp)
add_executable(find_smallest_letter_greater_than_target leetcode/find_smallest_letter_greater_than_target.cpp)
add_executable(maximum_count_of_positive_integer_and_negative_integer leetcode/maximum_count_of_positive_integer_and_negative_integer.cpp)
add_executable(find_the_distance_value_between_two_arrays leetcode/find_the_distance_value_between_two_arrays.cpp)
add_executable(minimum_number_of_flips_to_make_binary_grid_palindromic_i leetcode/minimum_number_of_flips_to_make_binary_grid_palindromic_i.cpp)
add_executable(shortest_subarray_to_be_removed_to_make_array_sorted leetcode/shortest_subarray_to_be_removed_to_make_array_sorted.cpp)
add_executable(longest_substring_without_repeating_characters leetcode/longest_substring_without_repeating_characters.cpp)
add_executable(minimum_size_subarray_sum leetcode/minimum_size_subarray_sum.cpp)
add_executable(subarray_product_less_than_k leetcode/subarray_product_less_than_k.cpp)
add_executable(replace_the_substring_for_balanced_string leetcode/replace_the_substring_for_balanced_string.cpp)
add_executable(minimum_number_of_flips_to_make_binary_grid_palindromic_ii leetcode/minimum_number_of_flips_to_make_binary_grid_palindromic_ii.cpp)
add_executable(maximum_average_subarray_i leetcode/maximum_average_subarray_i.cpp)
add_executable(sliding_subarray_beauty leetcode/sliding_subarray_beauty.cpp)
add_executable(find_the_power_of_k_size_subarrays_i leetcode/find_the_power_of_k_size_subarrays_i.cpp)
add_executable(find_the_substring_with_maximum_cost leetcode/find_the_substring_with_maximum_cost.cpp)
add_executable(k_concatenation_maximum_sum leetcode/k_concatenation_maximum_sum.cpp)
add_executable(maximum_score_of_spliced_array leetcode/maximum_score_of_spliced_array.cpp)
add_executable(minimum_falling_path_sum_ii leetcode/minimum_falling_path_sum_ii.cpp)
add_executable(friends_of_appropriate_ages leetcode/friends_of_appropriate_ages.cpp)
add_executable(combination_sum_iv leetcode/combination_sum_iv.cpp)
add_executable(combination_sum_ii leetcode/combination_sum_ii.cpp)
add_executable(online_majority_element_in_subarray leetcode/online_majority_element_in_subarray.cpp)
add_executable(shortest_subarray_with_sum_at_least_k leetcode/shortest_subarray_with_sum_at_least_k.cpp)
add_executable(image_smoother leetcode/image_smoother.cpp)
add_executable(maximum_number_of_occurrences_of_a_substring leetcode/maximum_number_of_occurrences_of_a_substring.cpp)
add_executable(maximum_sum_of_distinct_subarrays_with_length_k leetcode/maximum_sum_of_distinct_subarrays_with_length_k.cpp)
add_executable(shortest_distance_after_road_addition_queries_ii leetcode/shortest_distance_after_road_addition_queries_ii.cpp)
add_executable(take_k_of_each_character_from_left_and_right leetcode/take_k_of_each_character_from_left_and_right.cpp)
add_executable(snake_in_matrix leetcode/snake_in_matrix.cpp)
add_executable(count_unguarded_cells_in_the_grid leetcode/count_unguarded_cells_in_the_grid.cpp)
add_executable(find_the_count_of_numbers_which_are_not_special leetcode/find_the_count_of_numbers_which_are_not_special.cpp)
add_executable(flip_columns_for_maximum_number_of_equal_rows leetcode/flip_columns_for_maximum_number_of_equal_rows.cpp)
add_executable(find_the_number_of_winning_players leetcode/find_the_number_of_winning_players.cpp)
add_executable(rotating_the_box leetcode/rotating_the_box.cpp)
add_executable(smallest_range_covering_elements_from_k_lists leetcode/smallest_range_covering_elements_from_k_lists.cpp)
add_executable(maximum_matrix_sum leetcode/maximum_matrix_sum.cpp)
add_executable(greatest_common_divisor_of_strings leetcode/greatest_common_divisor_of_strings.cpp)
add_executable(kids_with_the_greatest_number_of_candies leetcode/kids_with_the_greatest_number_of_candies.cpp)
add_executable(can_place_flowers leetcode/can_place_flowers.cpp)
add_executable(reverse_vowels_of_a_string leetcode/reverse_vowels_of_a_string.cpp)
add_executable(move_zeroes leetcode/move_zeroes.cpp)
add_executable(find_the_highest_altitude leetcode/find_the_highest_altitude.cpp)
add_executable(find_the_difference_of_two_arrays leetcode/find_the_difference_of_two_arrays.cpp)
add_executable(unique_number_of_occurrences leetcode/unique_number_of_occurrences.cpp)
add_executable(network_delay_time leetcode/network_delay_time.cpp)
add_executable(sliding_puzzle leetcode/sliding_puzzle.cpp)
add_executable(alternating_groups_i leetcode/alternating_groups_i.cpp)
add_executable(find_champion_ii leetcode/find_champion_ii.cpp)
add_executable(alternating_groups_ii leetcode/alternating_groups_ii.cpp)
add_executable(shifting_letters_ii leetcode/shifting_letters_ii.cpp)
add_executable(maximum_consecutive_floors_without_special_floors leetcode/maximum_consecutive_floors_without_special_floors.cpp)
add_executable(next_permutation leetcode/next_permutation.cpp)
add_executable(steps_to_make_array_non_decreasing leetcode/steps_to_make_array_non_decreasing.cpp)
add_executable(minimum_reverse_operations leetcode/minimum_reverse_operations.cpp)
add_executable(minimum_cost_walk_in_weighted_graph leetcode/minimum_cost_walk_in_weighted_graph.cpp)
add_executable(satisfiability_of_equality_equations leetcode/satisfiability_of_equality_equations.cpp)
add_executable(row_with_maximum_ones leetcode/row_with_maximum_ones.cpp)
add_executable(qilin_q1 companies/qilin/qilin_q1.cpp)
add_executable(qilin_q2 companies/qilin/qilin_q2.cpp)
add_executable(smallest_string_with_swaps leetcode/smallest_string_with_swaps.cpp)
add_executable(number_of_good_paths leetcode/number_of_good_paths.cpp)
add_executable(count_the_number_of_complete_components leetcode/count_the_number_of_complete_components.cpp)
add_executable(check_if_grid_can_be_cut_into_sections leetcode/check_if_grid_can_be_cut_into_sections.cpp)
add_executable(minimize_string_length leetcode/minimize_string_length.cpp)
add_executable(minimum_cost_to_make_all_characters_equal leetcode/minimum_cost_to_make_all_characters_equal.cpp)
add_executable(minimum_index_of_a_valid_split leetcode/minimum_index_of_a_valid_split.cpp)
add_executable(maximum_number_of_points_from_grid_queries leetcode/maximum_number_of_points_from_grid_queries.cpp)
add_executable(longest_cycle_in_a_graph leetcode/longest_cycle_in_a_graph.cpp)
add_executable(apply_operations_to_maximize_score leetcode/apply_operations_to_maximize_score.cpp)
add_executable(adding_spaces_to_a_string leetcode/adding_spaces_to_a_string.cpp)
add_executable(sum_of_subarray_minimums leetcode/sum_of_subarray_minimums.cpp)
add_executable(partition_labels leetcode/partition_labels.cpp)
add_executable(percentage_of_letter_in_string leetcode/percentage_of_letter_in_string.cpp)
add_executable(reverse_nodes_in_k_group leetcode/reverse_nodes_in_k_group.cpp)
add_executable(minimum_operations_to_make_array_values_equal_to_k leetcode/minimum_operations_to_make_array_values_equal_to_k.cpp)
add_executable(count_the_number_of_powerful_integers leetcode/count_the_number_of_powerful_integers.cpp)
